Edit content and style

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
 <body>
 	<div class="content">
-		<h2> Daniel Stinson-Diess | Software Engineer </h2>
-
-		<img class="profile" src="assets/profile.jpg" alt="Photo of me" height="300px" />
+		<h2> Daniel Stinson-Diess | Software Engineer<span class="blink">&#9149;</span></h2>
 
 		<header>
 			<div class="links">
@@ -25,15 +23,27 @@
 					<li><a href="https://www.facebook.com/daniel.stinsondiess" target="_blank"> facebook </a></li>
 				</ul>
 				<br />
-				<br />
 			</div>
 		</header>
+
+		<img class="profile" src="assets/profile.jpg" alt="Photo of me" height="300px" />
 
 		<h3 class="center"> About me </h3>
 		<div>
 		<p> Hey there! My name is Daniel Stinson-Diess and I am a second year computer science major at UC Riverside.  I have interests in Computer Security, pure mathematics and I'm starting to get into web development. </p>
 
-		<p> I've always been passionate about technology, and broke thins so I could try to put them back.  While at UCR I've been elected as a member of the ACM Board to serve over 100 Computer Science members, and the Citrus Hack planning comittee to host the Inland Empire largest hackathon, as we expect about 600 hackers this year.</p>
+		<h4> This summer: </h4>
+		<ul>
+			<li> This summer I'm doing undergrate research with professor Jeff McDaniel doing backend development for a commerical siteus ing the Django web framwork. </li>
+		</ul>
+
+		<h4> Some Organizations I'm involved with: </h4>
+		<ul> 
+			<li> Asoscition of Computing Machinery (ACM) - I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year </li>
+			<li> Citrus Hack - I'm on the operations committee and work to organize 2 hackathons a year </li>
+			<li> Cyber@UCR - I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season </li>
+			<li> Institute of Electrical and Electronics Engineers (IEEE) - I go to meetings! :) </li>
+		</ul>
 
 		<p> If you have any questions at all feel free to reach out, I would love to hear from you! Check out a few of the links above and I look forward to working with you! </p>
 		</div>
