--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html >
-
 <head>
 	<title> Daniel Stinson-Diess </title>
 	<meta charset="UTF-8"
@@ -16,11 +15,11 @@
 		<header>
 			<div class="links">
 				<ul>
+					<li><a href="https://www.facebook.com/daniel.stinsondiess" target="_blank"> facebook </a></li>
 					<li><a href="https://www.linkedin.com/in/daniel-stinson-diess-55155b124/" target="_blank"> linkedin </a></li>
 					<li><a href="https://github.com/DStinDiess" target="_blank"> github </a></li>
 					<li><a href="assets/resume.pdf" target="_blank"> resume </a></li>
 					<li><a href="mailto:dstindiess@gmail.com"> email </a></li>
-					<li><a href="https://www.facebook.com/daniel.stinsondiess" target="_blank"> facebook </a></li>
 				</ul>
 				<br />
 			</div>
@@ -28,32 +27,24 @@
 
 		<img class="profile" src="assets/profile.jpg" alt="Photo of me" height="300px" />
 
-		<h3 class="center"> About me </h3>
+		<h4> About me: </h4>
 		<div>
-		<p> Hey there! My name is Daniel Stinson-Diess and I am a second year computer science major at UC Riverside.  I have interests in Computer Security, pure mathematics and I'm starting to get into web development. </p>
+		<p> Hey there! My name is Daniel Stinson-Diess and I'm a second year computer science major at UC Riverside.  I have interests in Computer Security, pure mathematics and I'm getting started with web development. </p>
 
 		<h4> This summer: </h4>
 		<ul>
-			<li> This summer I'm doing undergrate research with professor Jeff McDaniel doing backend development for a commerical siteus ing the Django web framwork. </li>
+			<li> This summer I'm doing undergraduate research with professor Jeff McDaniel. My role is doing backend development for a commercial site using the Django web framework. </li>
 		</ul>
 
 		<h4> Some Organizations I'm involved with: </h4>
 		<ul> 
-			<li> Asoscition of Computing Machinery (ACM) - I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year </li>
+			<li> Association of Computing Machinery (ACM) - I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year </li>
 			<li> Citrus Hack - I'm on the operations committee and work to organize 2 hackathons a year </li>
 			<li> Cyber@UCR - I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season </li>
-			<li> Institute of Electrical and Electronics Engineers (IEEE) - I go to meetings! :) </li>
+			<li> Institute of Electrical and Electronics Engineers (IEEE) - I go to meetings! </li>
 		</ul>
 
-		<p> If you have any questions at all feel free to reach out, I would love to hear from you! Check out a few of the links above and I look forward to working with you! </p>
+		<p>  Check out a few of the links above, if you have any questions at all feel free to reach out! I look forward to working with you! </p>
 		</div>
-
-		<footer>
-
-		</footer>
 	</div>
 </body>
-
-<footer>
-	<script type="text/javascript"></script>
-</footer>
