--- a/index.html
+++ b/index.html
@@ -38,13 +38,17 @@
 
 		<h4> Some Organizations I'm involved with: </h4>
 		<ul> 
-			<li> Association of Computing Machinery (ACM) - I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year </li>
-			<li> Citrus Hack - I'm on the operations committee and work to organize 2 hackathons a year </li>
-			<li> Cyber@UCR - I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season </li>
+			<li> Association of Computing Machinery (ACM) - I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year. </li>
+			<li> Citrus Hack - I'm on the operations committee that organizes 2 hackathons a year. </li>
+			<li> Cyber@UCR - I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season. </li>
 			<li> Institute of Electrical and Electronics Engineers (IEEE) - I go to meetings! </li>
 		</ul>
 
 		<p>  Check out a few of the links above, if you have any questions at all feel free to reach out! I look forward to working with you! </p>
 		</div>
 	</div>
+
+	<footer>
+		<small class="center">&copy; 2017 Daniel Stinson-Diess. All rights reserved.</small>
+	</footer>
 </body>
