Adding new links and condensing styles

--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
 				<br />
 			</div>
 		</header>
-
+		
 		<img class="profile" src="assets/profile.jpg" alt="Photo of me" height="300px" />
+		
+		<section>
+			<h4> About me: </h4>
+			<p> Hey there! My name is Daniel Stinson-Diess and I'm a second year computer science major at UC Riverside.  I have interests in Computer Security, pure mathematics and I'm getting started with web development. </p>
 
-		<h4> About me: </h4>
-		<div>
-		<p> Hey there! My name is Daniel Stinson-Diess and I'm a second year computer science major at UC Riverside.  I have interests in Computer Security, pure mathematics and I'm getting started with web development. </p>
+			<h4> This summer: </h4>
+			<ul>
+				<li> This summer I'm doing undergraduate research with professor Jeff McDaniel. My role is doing backend development for a commercial site using the Django web framework. </li>
+			</ul>
 
-		<h4> This summer: </h4>
-		<ul>
-			<li> This summer I'm doing undergraduate research with professor Jeff McDaniel. My role is doing backend development for a commercial site using the Django web framework. </li>
-		</ul>
+			<h4> Some Organizations I'm involved with: </h4>
+			<ul> 
+				<li> <a href="https://www.acmucr.org/" target="_blank"> Association of Computing Machinery</a> (ACM) - I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year. </li>
+				<li> <a href="https://www.citrushack.com/" target="_blank"> Citrus Hack</a> - I'm on the operations committee that organizes 2 hackathons a year. </li>
+				<li> Cyber@UCR - I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season. </li>
+				<li> Institute of Electrical and Electronics Engineers (IEEE) - I go to meetings! </li>
+			</ul>
 
-		<h4> Some Organizations I'm involved with: </h4>
-		<ul> 
-			<li> Association of Computing Machinery (ACM) - I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year. </li>
-			<li> Citrus Hack - I'm on the operations committee that organizes 2 hackathons a year. </li>
-			<li> Cyber@UCR - I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season. </li>
-			<li> Institute of Electrical and Electronics Engineers (IEEE) - I go to meetings! </li>
-		</ul>
-
-		<p>  Check out a few of the links above, if you have any questions at all feel free to reach out! I look forward to working with you! </p>
-		</div>
+			<p>  Check out a few of the links above, if you have any questions at all feel free to reach out! I look forward to working with you! </p>
+		</section>
 	</div>
 
 	<footer>
