--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html >
 <head>
 	<title> Daniel Stinson-Diess </title>
-	<meta charset="UTF-8"
-	<meta name="description" content="Daniel Stinson-Diess, 2nd Year Computer Science Student at UC Riverside" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="UTF-8"/>
+	<meta name="description" content="Daniel Stinson-Diess, Computer Science Student at UC Riverside"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href='https://fonts.googleapis.com/css?family=Droid Sans Mono' rel='stylesheet'>
 	<script>
@@ -14,7 +14,6 @@
 
 	  	ga('create', 'UA-102922594-1', 'auto');
 	  	ga('send', 'pageview');
-
 	</script>
 </head>
 
@@ -24,13 +23,11 @@
 
 		<header>
 			<div class="links">
-				<ul>
-					<li><a href="https://www.facebook.com/daniel.stinsondiess" target="_blank"> facebook </a></li>
-					<li><a href="https://www.linkedin.com/in/daniel-stinson-diess-55155b124/" target="_blank"> linkedin </a></li>
-					<li><a href="https://github.com/DStinDiess" target="_blank"> github </a></li>
-					<li><a href="assets/resume.pdf" target="_blank"> resume </a></li>
-					<li><a href="mailto:dstindiess@gmail.com"> email </a></li>
-				</ul>
+					<a href="https://www.facebook.com/daniel.stinsondiess" target="_blank">facebook</a>
+					<a href="https://www.linkedin.com/in/daniel-stinson-diess-55155b124/" target="_blank">linkedin</a>
+					<a href="https://github.com/DStinDiess" target="_blank">github</a>
+					<a href="assets/resume.pdf" target="_blank">resume</a>
+					<a href="mailto:dstindiess@gmail.com">email</a>
 				<br />
 			</div>
 		</header>
@@ -39,22 +36,23 @@
 		
 		<section>
 			<h4> About me: </h4>
-			<p> Hey there! My name is Daniel Stinson-Diess and I'm a second year computer science major at UC Riverside.  I have interests in Computer Security, pure mathematics and I'm getting started with web development. </p>
+			<p> Hey there! My name is Daniel Stinson-Diess and I'm a 2nd year computer science major at UC Riverside.  Academically I'm interested in computer security, and pure mathematics. I'm getting started with web and app development to build some awesome projects! </p>
 
 			<h4> This summer: </h4>
 			<ul>
-				<li> This summer I'm doing undergraduate research with professor Jeff McDaniel. My role is doing backend development for a commercial site using the Django web framework. </li>
+				<li> Undergraduate research with professor Jeff McDaniel. My role is doing backend development for a commercial site using the Django web framework. </li>
+				<li> I'm going through the ropes of iOS development and learning more web design techniques. If you have any project ideas I would love to hear them! </li>
 			</ul>
 
 			<h4> Some Organizations I'm involved with: </h4>
 			<ul> 
-				<li> <a href="https://www.acmucr.org/" target="_blank"> Association of Computing Machinery</a> (ACM) - I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year. </li>
-				<li> <a href="https://www.citrushack.com/" target="_blank"> Citrus Hack</a> - I'm on the operations committee that organizes 2 hackathons a year. </li>
-				<li> Cyber@UCR - I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season. </li>
-				<li> Institute of Electrical and Electronics Engineers (IEEE) - I go to meetings! </li>
+				<li> <a href="https://www.acmucr.org/" target="_blank"> Association of Computing Machinery</a> (ACM): I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year. </li>
+				<li> <a href="https://www.citrushack.com/" target="_blank"> Citrus Hack</a>: I'm on the operations committee that organizes 2 hackathons a year. </li>
+				<li> Cyber@UCR: I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season. </li>
+				<li> Institute of Electrical and Electronics Engineers (IEEE): I go to meetings! </li>
 			</ul>
 
-			<p>  Check out a few of the links above, if you have any questions at all feel free to reach out! I look forward to working with you! </p>
+			<p>  Check out a few of the links above, if you have any questions at all, feel free to reach out! I look forward to working with you! </p>
 		</section>
 	</div>
 
