Relocate home id

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="w3-row-padding">
 
 		<header>
-			<h1 class="contrast-font"> Daniel Stinson-Diess</h1>
+			<h1 class="contrast-font" id="home"> Daniel Stinson-Diess</h1>
 		</header>
 
 		<aside class="w3-third w3-container w3-center">
@@ -54,7 +54,7 @@
 					<h2>Software Engineer | <span class="top-quote">"Artistry and Engineering"</span>
 				</div>
 
-				<div class="w3-bar block" id="home">
+				<div class="w3-bar block">
 				 	<button class="w3-button"><a href="#home">Home</a></button>
 				 	<button class="w3-button"><a href="assets/resume.pdf" target="_blank">Resume</a></button>
 				 	<button class="w3-button">Portfolio</button>
