Steve jobs quote

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<section class="w3-twothird w3-container w3-center">
 			<div class="bio">
 				<div>
-					<h2>Software Engineer | <span class="top-quote">"Artistry and Engineering"</span>
+					<h2>Software Engineer | <span class="top-quote">"Real Artists Ship"</span>
 				</div>
 
 				<div class="w3-bar block">
