--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link href="https://fonts.googleapis.com/css?family=Lora|Source+Code+Pro" rel="stylesheet">	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Lora|Source+Code+Pro" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script>
 	  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -51,14 +52,14 @@
 		<section class="w3-twothird w3-container w3-center">
 			<div class="bio">
 				<div>
-					<h2>Software Engineer | <span class="top-quote">"Real Artists Ship"</span>
+					<h2>Software Engineer | <span class="top-quote">"Real Artists Ship"</span></h2>
 				</div>
 
 				<div class="w3-bar block">
 				 	<button class="w3-button"><a href="#home">Home</a></button>
 				 	<button class="w3-button"><a href="assets/resume.pdf" target="_blank">Resume</a></button>
-				 	<button class="w3-button">Portfolio</button>
-				 	<button class="w3-button">Skills</button>
+				 	<button class="w3-button"><a href="calender.html">Calender</a></button>
+				 	<button class="w3-button"><a href="">Portfolio</a></button>
 				</div>
 				
 				<h4 class="contrast-font"> About me: </h4>
@@ -85,7 +86,7 @@
 					<ul> 
 						<li> <a href="https://www.acmucr.org/" target="_blank"> Association of Computing Machinery</a> (ACM): I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year. </li>
 						<li> <a href="https://www.citrushack.com/" target="_blank"> Citrus Hack</a>: I'm on the operations committee that organizes 2 hackathons a year. </li>
-						<li> Cyber@UCR: I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season. </li>
+						<li> Cyber@UCR: I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season, and a competitor in the National Cyber League. </li>
 						<li> Institute of Electrical and Electronics Engineers (IEEE): I go to meetings! </li>
 					</ul>
 				</div>
@@ -101,3 +102,4 @@
 		</footer>
 	</div>
 </body>
+</html>
