--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <head>
 	<title> Daniel Stinson-Diess </title>
 	<meta charset="UTF-8"/>
@@ -19,8 +19,9 @@
 	</script>
 </head>
 
-<body>	
-	<div class="w3-row-padding">
+<body>
+
+	<div class="w3-row-padding container">
 
 		<header>
 			<h1 class="contrast-font" id="home"> Daniel Stinson-Diess</h1>
@@ -52,18 +53,17 @@
 		<section class="w3-twothird w3-container w3-center">
 			<div class="bio">
 				<div>
-					<h2>Software Engineer | <span class="top-quote">"Real Artists Ship"</span></h2>
+					<h2>Software Engineer | <span class="top-quote">"Artistry and Engineering"</span></h2>
 				</div>
 
 				<div class="w3-bar block">
 				 	<button class="w3-button"><a href="#home">Home</a></button>
 				 	<button class="w3-button"><a href="assets/resume.pdf" target="_blank">Resume</a></button>
 				 	<button class="w3-button"><a href="calender.html">Calender</a></button>
-				 	<button class="w3-button"><a href="">Portfolio</a></button>
 				</div>
 				
 				<h4 class="contrast-font"> About me: </h4>
-				<p> Hey there! My name is Daniel Stinson-Diess and I'm a 2nd year computer science major at UC Riverside.  Academically, I'm interested in the fields of computer security and pure mathematics. I'm getting started with web and app development to build some awesome projects! </p>
+				<p> Hey there! My name is Daniel Stinson-Diess and I'm a 2nd year computer science major at UC Riverside.  Academically, I'm interested in the fields of computer security and pure mathematics. I'm getting started with web and app development hoping to build some awesome projects! </p>
 				
 			</div>
 			
@@ -97,7 +97,6 @@
 		</section>
 
 		<footer>
-			<p>  Check out a few of the links above, if you have any questions at all, feel free to reach out! I look forward to working with you! </p>
 			<small class="center">&copy; 2017 Daniel Stinson-Diess.</small>
 		</footer>
 	</div>
