Optimizing speed w/ images and caching

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title> Daniel Stinson-Diess </title>
 	<meta charset="UTF-8"/>
 	<meta name="description" content="Daniel Stinson-Diess, Computer Science Student at UC Riverside"/>
+	<meta http-equiv="Cache-control" content="public">
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,7 +22,7 @@
 
 <body>
 
-	<div class="w3-row-padding container">
+	<div class="w3-row container">
 
 		<header>
 			<h1 class="contrast-font" id="home"> Daniel Stinson-Diess</h1>
@@ -68,7 +69,7 @@
 			</div>
 			
 
-			<div class="w3-row-padding">
+			<div class="w3-row">
 
 				<div class="w3-half w3-container alt-color">
 					<h4 class="contrast-font"> Summer 2017: </h4>
