Add content to new look

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			         <p>I'm getting started with web and app development hoping to build some awesome projects!</p>
             
 
-			       <h2 class="display-4"> Some links:</h2>
+			       <h4 class="display-7"> Some links:</h4>
 				    <ul> 
 					     <li>LinkedIn: <a href="https://www.linkedin.com/in/daniel-stinson-diess-55155b124/" target="_blank"><span class="link-text">DStinDiess</span></a>
 					     </li>
@@ -72,6 +72,29 @@
 					     <li>Email: <a href="mailto:dstindiess@gmail.com"><span class="link-text">dstindiess@gmail.com</span></a>
 					     </li>
 				      </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <div class="p-5">
+              <img class="img-fluid rounded-circle" src="ACM.jpg" alt="">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="p-5">
+              <h2 class="display-4">What I Do:</h2>
+              <ul> 
+               <li> <a href="https://www.acmucr.org/" target="_blank"> Association of Computing Machinery</a> (ACM): I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year. </li>
+               <li> <a href="https://www.citrushack.com/" target="_blank"> Citrus Hack</a>: I'm on the operations committee that organizes 2 hackathons a year. </li>
+                <li> Cyber@UCR: I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season, and a competitor in the National Cyber League. </li>
+               <li> Institute of Electrical and Electronics Engineers (IEEE): I go to meetings! </li>
+             </ul>
             </div>
           </div>
         </div>
