Resolve resume issue | 1

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="calender.html">Calender</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./resume.pdf" target="blank_">Resume</a>
+              <a class="nav-link" href="./Resume.pdf" target="blank_">Resume</a>
             </li>
           </ul>
         </div>
