Update content after moves to cloudflare

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <div class="p-5">
               <h2 class="display-4">Greetings!</h2>
 
-			         <p>Hey there! My name is Daniel Stinson-Diess and I'm a 2nd year computer science major at UC Riverside.</p>
+                <p>Hey there! My name is Daniel Stinson-Diess and I'm a 2nd year computer science major at UC Riverside.</p>
 
-                <p>Academically, I'm interested in the fields of computer security and pure mathematics. </p>
-			         <p>I'm getting started with web and app development hoping to build some awesome projects!</p>
+                <p>Academically, I'm interested in the fields of computer security and systems development. </p>
+                <p>I'm getting started with systems engineering and developing tools that I can use for security testing!</p>
             
 
 			       <h4 class="display-7"> Some links:</h4>
@@ -90,10 +90,8 @@
             <div class="p-5">
               <h2 class="display-4">What I Do:</h2>
               <ul> 
-               <li> <a href="https://www.acmucr.org/" target="_blank"> Association of Computing Machinery</a> (ACM): I'm currently serving as the Fundraising Chair for the 2017 - 2018 school year. </li>
-               <li> <a href="https://www.citrushack.com/" target="_blank"> Citrus Hack</a>: I'm on the operations committee that organizes 2 hackathons a year. </li>
-                <li> Cyber@UCR: I was an alternate for the Western Regional Collegiate Cyber Defense Competition (WRCCDC) team in the 2017 season, and a competitor in the National Cyber League. </li>
-               <li> Institute of Electrical and Electronics Engineers (IEEE): I go to meetings! </li>
+                <li> <a href="https://www.acmucr.org/" target="_blank"> Association of Computing Machinery</a> (ACM): I'm currently serving as the Vice Chair for the 2018 - 2019 school year. In the past I was the fundraising chair. I'm super excited to build our club more and mentor younger students and help them succeed.</li>
+                <li> Cyber@UCR: I'm serving as the Vice Chair for the school year of 2018-2019! My goal is to pivot the club to practicing and developing security products. We are doing this with offensive CTF challenges and demonstrations with various types of malware. </li>
              </ul>
             </div>
           </div>
