--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
 
 						<p>My experience is in the fields of incident response and security automation. It's incredible how hard simple things become when you do them at scale, and we need better tools and products to improve this.</p>
 
-						<p>On campus I'm a leader in the Association for Computing Machinery(ACM) and Cyber@UCR, it's excited to serve as the VP of each. In the past with ACM I served as the fundraising chair and  I'm now super excited to build our club more and mentor younger students and help them succeed! I was also elected as vice-chair for Cyber where I want to pivot the club to practicing and developing security products. We are doing this with offensive CTF challenges and demonstrations with various types of malware.</p>
+						<p>On campus I'm a leader in the Association for Computing Machinery(ACM) and Cyber@UCR, I'm excited to serve as the Vice-President of each. In the past with ACM I served as the fundraising chair and  I'm now super excited to build our club more, mentor younger students and help them succeed! I was also elected as vice-chair for Cyber where I want to pivot the club to practicing and developing security products. We are doing this with offensive CTF challenges and demonstrations with various types of malware.</p>
 
 						<p>When I'm taking time off the computer I enjoying cycling, and rock climbing. In the past I've climbed at <a href="www.climbhangar18.com">Hangar18</a>, and <a href="www.vitalclimbinggym.com">Vital</a>.</p>
 					</section>
