--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<p>My version of the C malloc library. It allocates based on a segmented free-list. In the future I want to optimize this with faster data structures. Check out details <a href="https://github.com/DStinDiess/MallocLibrary">here</a>.</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/Rshell.png" class="image fit thumb"><img src="images/thumbs/Rshell.png" alt="" /></a>
+								<a href="images/fulls/rshell.png" class="image fit thumb"><img src="images/thumbs/rshell.png" alt="" /></a>
 								<h3>R'Shell</h3>
 								<p>Bash emulator, built in C++ using extensible design patterns. I want to extend this project with shell history, and the ability to change directories. Check out details <a href="https://github.com/DStinDiess/RShell">here</a>.</p>
 							</article>
