Implement temp mastodon verification

--- a/index.html
+++ b/index.html
@@ -1,100 +1,26 @@
-<!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Welcome | danielstinsondiess.net</title>
-		<link rel="shortcut icon" href="profile.ico" />
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-	</head>
-	<body id="top">
-
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="Daniel Stinson-Diess" /></a>
-					<h1><strong>Hey! I'm Daniel.</strong> Software engineer,<br />
-					security enthusiast, and general hacker.</h1>
-				</div>
-			</header>
-
-		<!-- Main -->
-			<div id="main">
-
-				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>About me</h2>
-						</header>
-						<p>I'm a computer science student who likes to build and break things. I pull apart everything from operating systems to web development. My experience is in research, incident response, and security automation so far. When I'm away from the screen, I climb rocks, pick locks, and enjoy good food.</p>
-						<ul class="actions">
-							<li><a href="about/index.html" class="button">Learn More</a></li>
-						</ul>
-					</section>
-
-				<!-- Two -->
-					<section id="two">
-						<h1>Projects</h1>
-						<div class="row">
-							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/freelist.png" class="image fit thumb"><img src="images/thumbs/freelist.png" alt="" /></a>
-								<h3>Malloc Package</h3>
-								<p>My version of the C malloc library. It allocates based on a segmented free-list. In the future I want to optimize this with faster data structures. Check out details <a href="https://github.com/DStinDiess/MallocLibrary">here</a>.</p>
-							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/rshell.png" class="image fit thumb"><img src="images/thumbs/rshell.png" alt="" /></a>
-								<h3>R'Shell</h3>
-								<p>Bash emulator, built in C++ using extensible design patterns. I want to extend this project with shell history, and the ability to change directories. Check out details <a href="https://github.com/DStinDiess/RShell">here</a>.</p>
-							</article>
-							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>CTF Tracker</h3>
-								<p>I'm building a ticket tracker for our team to work on CTF contests. I'll start soon...</p>
-							</article>
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section id="three">
-						<h1>Blog posts</h1>
-						<p>These will be coming soon! I want to write about the software and technologies I use.</p>
-						<ul class="actions">
-							<li><a href="blog/index.html" class="button">Learn More</a></li>
-						</ul>
-					</section>
-			</div>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/daniel-stinson-diess" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/DStinDiess" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:dstindiess@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						<li><a href="assets/Resume.pdf" class="icon fa-file"><span class="label">Resume</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; 2018 Daniel Stinson-Diess</li>
-						<li><a href="about/index.html">about</a></li>
-						<li><a href="blog/index.html">blog</a></li>
-					</ul>
-				</div>
-			</footer>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Redirecting to github.com/shellcromancer/</title>
+    <meta http-equiv="refresh" content="0; URL=https://github.com/shellcromancer">
+    <link href="https://github.com/shellcromancer" rel="me">
+    <link href="https://shellcromancer.io/" rel="me">
+    <link href="https://infosec.exchange/@shellcromancer" rel="me">
+  </head>
+  <body style="margin: 0; padding: 0">
+    <a
+      href="https://github.com/shellcromancer"
+      style="
+        display: block;
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
+        padding: 0;
+        color: white;
+      "
+    >
+      github.com/shellcromancer
+    </a>
+  </body>
 </html>
